--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">ActivityTest2</string>
+    <string name="tag_text_default">TAG</string>
+    <string name="answer_text_default">Press GO and input your name</string>
+    <string name="answer_text_format">Hello %s,\nNice to see you.</string>
+    <string name="name_input_hint">Name</string>
+    <string name="go_button_label">GO</string>
+    <string name="ok_button_label">OK</string>
 </resources>
