--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="answer_text_format">Hello %s,\nNice to see you.</string>
     <string name="name_input_hint">Name</string>
     <string name="go_button_label">Select</string>
+    <string name="back_button_label">back</string>
+    <string name="save_button_label">save</string>
     <string name="ok_button_label">OK</string>
     <string name="button">Get Image</string>
     <string name="description">a picture</string>
